# findmkl_cmake

./: .appveyor.yml  .travis.yml  CMakeLists.txt  HelloWorld.cpp  README.md
Hello/: CMakeLists.txt  Speaker.h
Hello_lib/: CMakeLists.txt
cmake/: CheckFunctionExists.cmake  FindBLAS.cmake  FindMKL.cmake
myLib_Hello/: CMakeLists.txt  Speaker.cpp
